# scav-hunt

./: Cargo.toml  LICENSE  index.html
frontend/: Cargo.toml  index.html
server/: Cargo.toml
src/: lib.rs
