[package]
name = "scav_hunt"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
yew = { version = "0.20.0", features = ["csr"] }
rocket = "0.5.0-rc.2"

# Error in yew otherwise
getrandom = { version = "0.2.8", features = ["js"] }
